--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,17 @@
 # vscode
 /.vscode/
 
+# movetia docs
+/movetia/
+
 # certificates
 cert/*.pdf
 
 # except THE-certificate-specimen.pdf
 !cert/THE-certificate-specimen.pdf
+
+test.html
+test2.html
 
 # log[0-9].txt      # Ignores log0.txt, log1.txt, ..., log9.txt
 # log[015].txt      # Ignores log0.txt, log1.txt, log5.txt
@@ -13,3 +19,4 @@ cert/*.pdf
 # logs/**/          # Ignores all directories named logs anywhere in the repository
 # *.log             # Ignores all .log files anywhere in the repository
 # /logs/            # Ignores the logs directory in the root
+
